[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "squishbox"
version = "1.0.1"
description = "LCD + button hardware interface"
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
authors = [
    { name = "Bill Peterson", email = "bill@geekfunklabs.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gpiod", "pyyaml", "alsa-midi", "evdev"
]

[project.optional-dependencies]
full = ["fluidpatcher", "gi"]

[project.urls]
Homepage = "https://github.com/GeekFunkLabs/squishbox"
Issues = "https://github.com/GeekFunkLabs/squishbox/issues"

[tool.setuptools.package-data]
"squishbox.data" = ["**/*.yaml"]

